<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- STATUS ORDER -->
        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status_pending"
            android:textStyle="bold"/>

        <!-- TOTAL HARGA -->
        <TextView
            android:id="@+id/txtTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_default"/>

        <!-- BUTTON UPDATE STATUS -->
        <Button
            android:id="@+id/btnUpdateStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_status"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
