<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardParfum"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <!-- GAMBAR PARFUM -->
        <ImageView
            android:id="@+id/imgParfum"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:transitionName="parfum_image"
            android:contentDescription="@string/parfum_image_desc"/>

        <!-- INFO -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <!-- BUTTON ADD -->
            <Button
                android:id="@+id/btnAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_gravity="end"
                android:layout_marginBottom="6dp"/>

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_parfum_name"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/txtExtra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_parfum_extra"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_parfum_price"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@android:color/black"/>


            <TextView
                android:id="@+id/txtStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/black"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

